--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,8 +41,6 @@ color: #555555;
 padding-left: 5px;
 }
 
-.images{
-margin: 0 auto;
-width:768px;
-position: relative;
+.tags{
+text-align: center;
 }
